[gd_scene load_steps=16 format=3 uid="uid://mitdgrjd8nwd"]

[ext_resource type="Texture2D" uid="uid://di8luudourao5" path="res://Assets/Character Assets/SpaceShip.png" id="1_q1geo"]
[ext_resource type="Script" path="res://Scripts/PlayerScripts/ship.gd" id="1_qn0sq"]
[ext_resource type="Texture2D" uid="uid://dfwc7r8e0oqvl" path="res://Assets/Character Assets/SpaceShipPropellant1.png" id="2_vq5du"]
[ext_resource type="PackedScene" uid="uid://i4xdqnql40ms" path="res://Scenes/PlayerScenes/charge_bar.tscn" id="5_gqt3p"]
[ext_resource type="Texture2D" uid="uid://b4jlown0godjj" path="res://Assets/Character Assets/SpaceShipPropellant4.png" id="5_udsu8"]
[ext_resource type="AudioStream" uid="uid://ro5kci76t2of" path="res://Sounds/DefiniteShot5.wav" id="6_iyig7"]
[ext_resource type="AudioStream" uid="uid://cpql6n1e6jijn" path="res://Sounds/DefiniteShot4.wav" id="7_15w4d"]
[ext_resource type="AudioStream" uid="uid://dmrt4mnhr3yxj" path="res://Sounds/DefiniteShot2.wav" id="8_1as87"]
[ext_resource type="AudioStream" uid="uid://v2btomxuvsve" path="res://Sounds/DefiniteShot3.wav" id="9_m6egu"]
[ext_resource type="AudioStream" uid="uid://bj5njjahf6mv8" path="res://Sounds/AccessDeniedNow.wav" id="10_6nfjl"]
[ext_resource type="AudioStream" uid="uid://1x4bywne5h6w" path="res://Sounds/laserexp2.mp3" id="10_e8i0n"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_e2flj"]
load_path = "res://.godot/imported/SpaceShipPropellant3.png-e42a1063d9f10d56e1ea92326ca6faf3.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_uc2xf"]
load_path = "res://.godot/imported/SpaceShipPropellant2.png-f710d01054a3032e0bab0f0b8cb3c464.ctex"

[sub_resource type="SpriteFrames" id="SpriteFrames_wf0qt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_udsu8")
}, {
"duration": 1.0,
"texture": ExtResource("2_vq5du")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_e2flj")
}, {
"duration": 1.5,
"texture": SubResource("CompressedTexture2D_uc2xf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgyem"]
size = Vector2(16, 14)

[node name="Ship" type="Node2D" groups=["Ship"]]
script = ExtResource("1_qn0sq")
ship_speed = 60.0

[node name="SpaceShip" type="Sprite2D" parent="."]
position = Vector2(7, 0)
texture = ExtResource("1_q1geo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-10, 0)
sprite_frames = SubResource("SpriteFrames_wf0qt")
frame_progress = 0.959636
speed_scale = 2.5

[node name="ChargeBar" parent="." instance=ExtResource("5_gqt3p")]
offset_left = -16.0
offset_top = 8.0
offset_right = 49.0
offset_bottom = 24.0
scale = Vector2(0.5, 0.5)
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(7, 0)
shape = SubResource("RectangleShape2D_lgyem")

[node name="PerfectSmall" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PerfectLarge" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="AudioManager" type="Node" parent="."]

[node name="SmallShot" type="AudioStreamPlayer2D" parent="AudioManager"]
stream = ExtResource("6_iyig7")
bus = &"Sound"

[node name="BigShot" type="AudioStreamPlayer2D" parent="AudioManager"]
stream = ExtResource("7_15w4d")
bus = &"Sound"

[node name="PerfSmallShot" type="AudioStreamPlayer2D" parent="AudioManager"]
stream = ExtResource("8_1as87")
bus = &"Sound"

[node name="PerfBigShot" type="AudioStreamPlayer2D" parent="AudioManager"]
stream = ExtResource("9_m6egu")
bus = &"Sound"

[node name="ShipHit" type="AudioStreamPlayer2D" parent="AudioManager"]
stream = ExtResource("10_6nfjl")
bus = &"Sound"

[node name="ShipDestroyed" type="AudioStreamPlayer2D" parent="AudioManager"]
stream = ExtResource("10_e8i0n")
bus = &"Sound"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="PerfectSmall" to="." method="_on_perfect_small_timeout"]
[connection signal="timeout" from="PerfectLarge" to="." method="_on_perfect_large_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
